# gitlab-data-docs-cn

./: .env.example  .gitattributes  .gitignore  README.md  README_EN.md  pyproject.toml  requirements.txt
data/markdown/handbook/enterprise-data/platform/: AWS_Data_Team_Guide.md  Clustering_in_Snowflake.md  Data_Infrastructure.md  Data_Team_CI_Jobs.md  Data_pipelines.md  Data_with_GitLab_Duo.md  Duo_Inspiration_Hub.md  Enterprise_Data_Warehouse.md  GDPR_deletions.md  Getting_Started_With_CICD_for_Data_Science_Pipelines.md  Handbook_Embedding_Demonstration_Page.md  Jupyter_Guide.md  Monte_Carlo_Guide.md  Permifrost.md  PythonTools_package_management_and_inventory.md  Python_Guide.md  RStudio_Guide.md  Roles_&_Responsibilities.md  SAFE_Data_Guide.md  SQL_Style_Guide.md  Snowflake_Guide.md  Snowflake_SNS_integration_for_Snowflake_SnowPipe_and_task_for_failure.md  Snowflake_warehouse_optimization.md  Snowplow.md  Tableau.md  Tableau_Admin_Guide.md  Tableau_Developer_Guide.md  Tableau_Developer_Tips_and_Tricks.md  Tableau_Project_Leaders_Guide.md  Tableau_Style_Guide.md  Using_Feast.md  dbt_Guide.md  index.md
docs/: README.md
docs/zh-CN/handbook/enterprise-data/platform/: Data_pipelines.md  Permifrost.md  Snowflake_Guide.md  Snowflake_warehouse_optimization.md  Tableau.md  Tableau_Admin_Guide.md  Tableau_Developer_Guide.md  dbt_Guide.md
src/: main.py
src/translate/: ds.py  translate_docs.py
